@@ -7743,8 +7743,11 @@ extern bool job_independent(struct job_record *job_ptr, int will_run)
 	 * job records get purged (e.g. afterok, afternotok) */
 	depend_rc = test_job_dependency(job_ptr);
 	if (depend_rc == 1) {
-		job_ptr->state_reason = WAIT_DEPENDENCY;
-		xfree(job_ptr->state_desc);
+		if ((job_ptr->state_reason != WAIT_HELD) &&
+		    (job_ptr->state_reason != WAIT_HELD_USER)) {
+			job_ptr->state_reason = WAIT_DEPENDENCY;
+			xfree(job_ptr->state_desc);
+		}
 		return false;
 	} else if (depend_rc == 2) {
 		time_t now = time(NULL);
